--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@wdio/sync": "^5.8.1",
     "browserstack-local": "^1.4.0",
     "chai": "^4.2.0",
-    "webdriverio": "^5.8.3"
+    "webdriverio": "^5.8.3",
+    "node-fetch": "^2.1.2"
   },
   "devDependencies": {
     "@wdio/junit-reporter": "^5.8.0",
